--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.generate-ddl=true
 spring.datasource.platform=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.initialization-mode=always
+slave.password_path=file:/home/sam/spring-boot/password.txt
