--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 	    <artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
 	<dependency>
+	    <groupId>javax.validation</groupId>
+	    <artifactId>validation-api</artifactId>
+	    <version>2.0.1.Final</version>
+</dependency>
+	<dependency>
 	        <groupId>org.projectlombok</groupId>
 	        <artifactId>lombok</artifactId>
 	        <version>1.18.10</version>
